tme_cicd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world-node
  template:
    metadata:
      labels:
        app: hello-world-node
    spec:
      containers:
      - name: hello-world-node
        image: jarvan146/hello-world-node:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "0.2"
            memory: "256Mi"
          requests:
            cpu: "0.1"
            memory: "128Mi"
