tme_cicd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world-node
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    nodePort: 30000
  type: NodePort
